[gd_scene load_steps=3 format=2]

[ext_resource path="res://Key.gd" type="Script" id=1]
[ext_resource path="res://KeySound.gd" type="Script" id=2]

[node name="Key" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="KeySound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 2 )

[node name="KeyShape" type="Polygon2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="SnapToPoint" type="Line2D" parent="KeyShape"]
points = PoolVector2Array( 0, 0 )

[node name="ColorOverlay" type="Polygon2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="KeyCollision" type="CollisionPolygon2D" parent="."]
